2014-12-13  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package--list-loaded-files): New function
	to list files in a given directory which correspond to already
	loaded files.
	(package-activate-1): Reload files given by `package--list-loaded-files'.
	Fix bug#10125, bug#18443, and bug#18448.

2014-12-13  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc/vc-svn.el (vc-svn-diff): Fix bug #19312.

2014-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* simple.el (password-word-equivalents): Add "passcode", used for
	numeric secrets like PINs or RSA tokens.

2014-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-get-remote-path): Use a login shell in
	order to determine `tramp-own-remote-path'.

2014-12-13  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (python-shell-parse-command): Quote
	`python-shell-interpreter`.  (Bug#19289)

2014-12-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-indent-line): Use `noindent' in strings.
	(python-indent-levels): Document extra value.
	(python-indent-calculate-indentation): Return `noindent' in strings.
	(python-indent-post-self-insert-function)
	(python-indent-calculate-levels): Handle new value.

2014-12-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/network-stream.el (network-stream-open-starttls): No need to
	check for the availability of `gnutls-available-p'.

	* files.el (directory-files-recursively): Don't follow symlinks to
	other directories.

2014-12-12  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc/vc-dav.el, vc/vc-git.el, vc/vc-hg.el, vc/vc-src.el,
	vc/vc.el: latest-on-branch-p is no longer a public method.

	* vc/vc.el, vc/vc-hg.el, vc/vc-git.el, vc/vc-hooks.el,
	vc/vc-mtn.el, vc/vc-rcs.el, vc/vc-sccs.el, vc/vc-src.el: Remove `rollback'
	method, to be replaced in the future by uncommit.

2014-12-11  Michael Albinus  <michael.albinus@gmx.de>
